--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Kkrproject
+spring.datasource.url=jdbc:mysql://localhost:3306/boodschapp?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Blackberry1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
